tests/snapshots/snapshot_session_list__empty_session_list.snap
---
source: tests/snapshot_session_list.rs
expression: frame
---
                              │                                                 
  no tmux sessions            │   ▄                                             
  (press n to create · g for a│   █▀▀█ █▀▀█ █▀▀▀ █  █ █▀▀▄                      
                              │   █  █ █  █ ▀▀▀█ █  █ █  █                      
                              │   ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀  ▀                      
                              │                                                 
                              │   v2.0.16 · TDF banner: opencode                
                              │                                                 
                              │   press n to create a session                   
 bosun  v2.0.16 0 sessions↵ attach · n new · e edit · g group · 1-9 move · r ren
