tests/snapshots/snapshot_session_list__kill_in_progress_row.snap
---
source: tests/snapshot_session_list.rs
expression: frame
---
 ▌ ⟳  alpha  1w  killing…     │ ○ alpha  +                                      
       claude · /tmp/work     │                                                 
   ○  beta  1w                │  preview: capturing…                            
       claude · /tmp/work     │                                                 
                              │                                                 
                              │                                                 
                              │                                                 
 bosun  v2.1.2 2 sessions↵ attach · n new · e edit · g group · 1-9 move · r ren
