tests/snapshots/snapshot_session_list__warning_in_statusbar.snap
---
source: tests/snapshot_session_list.rs
expression: frame
---
 ▌ ○  alpha  1w               │ ○ alpha  +                                      
       claude · /tmp/work     │                                                 
                              │  preview: capturing…                            
                              │                                                 
                              │                                                 
 bosun  v2.1.0 list: tmux not running↵ attach · n new · e edit · g group · 1-9 m
